# CG-Final

./: .gitignore  CMakeLists.txt  README.md
Project1/: Animation.cpp  Animation.h  Colour.cpp  Colour.h  LightSource.h  Material.h  MathsHelper.cpp  MathsHelper.h  ObjectFactory.cpp  ObjectFactory.h  Project1.vcxproj  Project1.vcxproj.filters  SceneObject.cpp  SceneObject.h  Shader.h  fragmentshader_matte.frag  fragmentshader_shiny.frag  main.cpp  objloader.cpp  vertexshader.vert
